# bead_sorter

./: .gitignore  AGENTS.md  Cargo.toml  walkthrough.md
.cargo/: config.toml
app/: Cargo.toml  build.rs
app/src/: main.rs  neopixel.rs  servo.rs  switch.rs
app/src/camera/: dvp.rs  mod.rs  ov7670.rs  sccb.rs
bsp/: Cargo.toml
bsp/src/: lib.rs
fw/: Cargo.toml  memory.x
fw/.cargo/: config.toml
fw/src/: main.rs  neopixel.rs  servo.rs  sorter.rs  switch.rs
fw/src/camera/: dvp.rs  mod.rs  ov7670.rs
sorter_logic/: .swp  Cargo.toml  full_report.html  simulation_output.txt  simulation_report.html
sorter_logic/examples/: evaluate.rs  generate_labeling.rs  simulation.rs  simulation_full.rs  visualize.rs
sorter_logic/src/: lib.rs
sorter_logic/tests/: palette_test.rs
tools/image_saver/: Cargo.toml
tools/image_saver/src/: main.rs
tools/manual_sorter/: Cargo.toml  index.html
tools/manual_sorter/src/: main.rs
