[package]
name = "bead_sorter_app"
version = "0.1.0"
edition = "2021"

[dependencies]
bead_sorter_bsp = { path = "../bsp" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
defmt = "0.3"
log = "0.4"
rp2040-boot2 = "0.3"
defmt-rtt = "0.4"
# embassy-usb-logger removed to avoid conflict. We'll implement a simple writer.

panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
futures = { version = "0.3.30", default-features = false, features = ["async-await"] }
heapless = "0.8"
smart-leds = "0.4"
fixed = "1.27"

[[bin]]
name = "bead_sorter_app"
test = false
bench = false
