[package]
name = "bead_sorter_fw"
version = "0.1.0"
edition = "2021"

[dependencies]
bead_sorter_bsp = { path = "../bsp" }
sorter_logic = { path = "../sorter_logic" }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.9.0", features = ["defmt", "time-driver", "critical-section-impl", "rp2040", "unstable-pac"] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
defmt = "0.3"
log = "0.4"
rp2040-boot2 = "0.3"

panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
futures = { version = "0.3.30", default-features = false, features = ["async-await"] }
heapless = "0.8"
smart-leds = "0.4"
fixed = "1.27"
pio = { version = "0.3", default-features = false }
pio-proc = "0.3"
defmt-embassy-usbserial = "0.2.1"
static_cell = "2.1.1"
portable-atomic = { version = "1", features = ["critical-section"] }


[[bin]]
name = "bead_sorter_fw"
test = false
bench = false
