[package]
name = "manual_sorter"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
image = "0.24"
walkdir = "2"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.sorter_logic]
path = "../../sorter_logic"
